--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -50,7 +50,7 @@
     function swapFrames() {
       if (showingA) {
         // Switch to banner
-        frameB.src = "BANNER.html"; // always reload banner fresh
+        frameB.src = "Banner.html"; // always reload banner fresh
         frameB.classList.add("visible");
         frameA.classList.remove("visible");
 
