--- a/BB_FLIP.html
+++ b/BB_FLIP.html
@@ -34,7 +34,7 @@
 
   <!-- Two iframes for smooth fade transition -->
   <iframe id="frameA" src="BB_Telesales_Statistics.html" class="visible"></iframe>
-  <iframe id="frameB" src="BANNER.html"></iframe>
+  <iframe id="frameB" src="Banner.html"></iframe>
 
   <script>
     const frameA = document.getElementById("frameA");
@@ -79,3 +79,4 @@
 
 </body>
 </html>
+
