--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -34,7 +34,7 @@
 
   <!-- Two iframes for smooth fade transition -->
   <iframe id="frameA" src="Telesales_Statistics.html" class="visible"></iframe>
-  <iframe id="frameB" src="BANNER.html"></iframe>
+  <iframe id="frameB" src="Banner.html"></iframe>
 
   <script>
     const frameA = document.getElementById("frameA");
