--- a/BB_Flip.html
+++ b/BB_Flip.html
@@ -66,6 +66,24 @@
         frameA.classList.add("visible");
         frameB.classList.remove("visible");
 
+        // 🔹 Function to inject font-size styling into the telesales frame
+function enlargeFont() {
+  try {
+    const doc = frameA.contentDocument || frameA.contentWindow.document;
+    const style = doc.createElement('style');
+    style.textContent = `
+      body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
+        font-size: 1.2em !important; /* increase font size globally */
+      }
+      h1 { font-size: 2em !important; }
+      h2 { font-size: 1.6em !important; }
+      h3 { font-size: 1.4em !important; }
+    `;
+    doc.head.appendChild(style);
+  } catch (err) {
+    console.warn("Font resize skipped (cross-origin):", err);
+  }
+}
         setTimeout(() => {
           showingA = true;
           setTimeout(swapFrames, telesalesTime); // show telesales for 5 min
@@ -79,3 +97,4 @@
 
 </body>
 </html>
+
