--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -15,11 +15,11 @@
     }
 
     iframe {
-      position: absolute;
+      position: fixed; /* ✅ ensures it covers the full viewport */
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;     /* ✅ more consistent across browsers */
+      height: 100%;    /* ✅ same */
       border: none;
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
@@ -41,7 +41,7 @@
     const frameB = document.getElementById("frameB");
 
     // Timing settings
-    const telesalesTime = 1 * 60 * 1000; // 1 minutes
+    const telesalesTime = 1 * 60 * 1000; // 1 minute
     const bannerTime = 30 * 1000;        // 30 seconds
     const fadeDuration = 1500;           // 1.5 seconds fade
 
@@ -68,37 +68,35 @@
 
         setTimeout(() => {
           showingA = true;
-          setTimeout(swapFrames, telesalesTime); // show telesales for 5 min
+          setTimeout(swapFrames, telesalesTime); // show telesales for 1 min
         }, fadeDuration);
       }
     }
 
-// 🔹 Function to inject extra-large font sizes into the telesales frame
-function enlargeFont() {
-  try {
-    const doc = frameA.contentDocument || frameA.contentWindow.document;
-    const style = doc.createElement('style');
-    style.textContent = `
-      /* Super large fonts for big display screens */
-      body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
-        font-size: 3em !important;  /* everything 3x normal size */
+    // 🔹 Function to inject extra-large font sizes into the telesales frame
+    function enlargeFont() {
+      try {
+        const doc = frameA.contentDocument || frameA.contentWindow.document;
+        const style = doc.createElement('style');
+        style.textContent = `
+          /* Super large fonts for big display screens */
+          body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
+            font-size: 3em !important;
+          }
+          h1 { font-size: 3em !important; }
+          h2 { font-size: 3em !important; }
+          h3 { font-size: 3em !important; }
+          p, td, th { font-size: 3em !important; }
+        `;
+        doc.head.appendChild(style);
+      } catch (err) {
+        console.warn("Font resize skipped (cross-origin):", err);
       }
-      h1 { font-size: 3em !important; }
-      h2 { font-size: 3em !important; }
-      h3 { font-size: 3em !important; }
-      p, td, th { font-size: 3em !important; }
-    `;
-    doc.head.appendChild(style);
-  } catch (err) {
-    console.warn("Font resize skipped (cross-origin):", err);
-  }
-}
+    }
+
     // Start rotation after first telesales period
     setTimeout(swapFrames, telesalesTime);
   </script>
 
 </body>
 </html>
-
-
-
