--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -15,14 +15,16 @@
     }
 
     iframe {
-      position: fixed; /* ✅ ensures it covers the full viewport */
-      top: 0;
-      left: 0;
-      width: 100%;     /* ✅ more consistent across browsers */
-      height: 100%;    /* ✅ same */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
+      transform-origin: center center;
+      width: 1920px;     /* your dashboard’s base width */
+      height: 1080px;    /* your dashboard’s base height */
       border: none;
       opacity: 0;
-      transition: opacity 1.5s ease-in-out;
+      transition: opacity 1.5s ease-in-out, transform 0.5s ease-in-out;
     }
 
     iframe.visible {
@@ -40,53 +42,55 @@
     const frameA = document.getElementById("frameA");
     const frameB = document.getElementById("frameB");
 
-    // Timing settings
     const telesalesTime = 1 * 60 * 1000; // 1 minute
     const bannerTime = 30 * 1000;        // 30 seconds
-    const fadeDuration = 1500;           // 1.5 seconds fade
+    const fadeDuration = 1500;
 
     let showingA = true;
 
     function swapFrames() {
       if (showingA) {
-        // Switch to banner
-        frameB.src = "Banner.html"; // always reload banner fresh
+        frameB.src = "Banner.html";
         frameB.classList.add("visible");
         frameA.classList.remove("visible");
-
         setTimeout(() => {
           showingA = false;
-          setTimeout(swapFrames, bannerTime); // show banner for 30 sec
+          setTimeout(swapFrames, bannerTime);
         }, fadeDuration);
       } else {
-        // Switch back to telesales and reload for updated data
-        frameA.src = "BB_Telesales_Statistics.html?t=" + new Date().getTime(); 
-        // the ?t=timestamp ensures browser doesn’t cache the old data
-
+        frameA.src = "BB_Telesales_Statistics.html?t=" + new Date().getTime();
         frameA.classList.add("visible");
         frameB.classList.remove("visible");
-
         setTimeout(() => {
           showingA = true;
-          setTimeout(swapFrames, telesalesTime); // show telesales for 1 min
+          setTimeout(swapFrames, telesalesTime);
         }, fadeDuration);
       }
     }
 
-    // 🔹 Function to inject extra-large font sizes into the telesales frame
+    // 🔹 Auto-scale dashboard to fit any screen size
+    function autoScale() {
+      const iframes = document.querySelectorAll("iframe");
+      const baseWidth = 1920;
+      const baseHeight = 1080;
+      const scale = Math.min(window.innerWidth / baseWidth, window.innerHeight / baseHeight);
+      iframes.forEach(f => {
+        f.style.transform = `translate(-50%, -50%) scale(${scale})`;
+      });
+    }
+
+    window.addEventListener("resize", autoScale);
+    window.addEventListener("load", autoScale);
+
+    // 🔹 Optional: Enlarge fonts inside telesales iframe
     function enlargeFont() {
       try {
         const doc = frameA.contentDocument || frameA.contentWindow.document;
         const style = doc.createElement('style');
         style.textContent = `
-          /* Super large fonts for big display screens */
           body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
-            font-size: 3em !important;
+            font-size: 2.5em !important;
           }
-          h1 { font-size: 3em !important; }
-          h2 { font-size: 3em !important; }
-          h3 { font-size: 3em !important; }
-          p, td, th { font-size: 3em !important; }
         `;
         doc.head.appendChild(style);
       } catch (err) {
