--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -15,16 +15,14 @@
     }
 
     iframe {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(1);
-      transform-origin: center center;
-      width: 1920px;     /* your dashboard’s base width */
-      height: 1080px;    /* your dashboard’s base height */
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       border: none;
       opacity: 0;
-      transition: opacity 1.5s ease-in-out, transform 0.5s ease-in-out;
+      transition: opacity 1.5s ease-in-out;
     }
 
     iframe.visible {
@@ -42,67 +40,62 @@
     const frameA = document.getElementById("frameA");
     const frameB = document.getElementById("frameB");
 
-    const telesalesTime = 1 * 60 * 1000; // 1 minute
+    // Timing settings
+    const telesalesTime = 1 * 60 * 1000; // 1 minutes
     const bannerTime = 30 * 1000;        // 30 seconds
-    const fadeDuration = 1500;
+    const fadeDuration = 1500;           // 1.5 seconds fade
 
     let showingA = true;
 
     function swapFrames() {
       if (showingA) {
-        frameB.src = "Banner.html";
+        // Switch to banner
+        frameB.src = "Banner.html"; // always reload banner fresh
         frameB.classList.add("visible");
         frameA.classList.remove("visible");
+
         setTimeout(() => {
           showingA = false;
-          setTimeout(swapFrames, bannerTime);
+          setTimeout(swapFrames, bannerTime); // show banner for 30 sec
         }, fadeDuration);
       } else {
-        frameA.src = "BB_Telesales_Statistics.html?t=" + new Date().getTime();
+        // Switch back to telesales and reload for updated data
+        frameA.src = "BB_Telesales_Statistics.html?t=" + new Date().getTime(); 
+        // the ?t=timestamp ensures browser doesn’t cache the old data
+
         frameA.classList.add("visible");
         frameB.classList.remove("visible");
+        
         setTimeout(() => {
           showingA = true;
-          setTimeout(swapFrames, telesalesTime);
+          setTimeout(swapFrames, telesalesTime); // show telesales for 5 min
         }, fadeDuration);
       }
     }
 
-    // 🔹 Auto-scale dashboard to fit any screen size
-    function autoScale() {
-  const iframes = document.querySelectorAll("iframe");
-  const baseWidth = 1920;
-  const baseHeight = 1080;
-  const scale = window.innerHeight / baseHeight; // fill vertically
-  iframes.forEach(f => {
-    f.style.transform = `translate(-50%, -50%) scale(${scale})`;
-  });
-}
-
-
-    window.addEventListener("resize", autoScale);
-    window.addEventListener("load", autoScale);
-
-    // 🔹 Optional: Enlarge fonts inside telesales iframe
-    function enlargeFont() {
-      try {
-        const doc = frameA.contentDocument || frameA.contentWindow.document;
-        const style = doc.createElement('style');
-        style.textContent = `
-          body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
-            font-size: 2.5em !important;
-          }
-        `;
-        doc.head.appendChild(style);
-      } catch (err) {
-        console.warn("Font resize skipped (cross-origin):", err);
+ // 🔹 Function to inject extra-large font sizes into the telesales frame
+function enlargeFont() {
+  try {
+    const doc = frameA.contentDocument || frameA.contentWindow.document;
+    const style = doc.createElement('style');
+    style.textContent = `
+      /* Super large fonts for big display screens */
+      body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
+        font-size: 3em !important;  /* everything 3x normal size */
       }
-    }
-
+      h1 { font-size: 3em !important; }
+      h2 { font-size: 3em !important; }
+      h3 { font-size: 3em !important; }
+      p, td, th { font-size: 3em !important; }
+    `;
+    doc.head.appendChild(style);
+  } catch (err) {
+    console.warn("Font resize skipped (cross-origin):", err);
+  }
+}
     // Start rotation after first telesales period
     setTimeout(swapFrames, telesalesTime);
   </script>
 
 </body>
 </html>
-
