--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -23,6 +23,8 @@
       border: none;
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
+      transform: translate(-50%, -50%) scale(1.3); 
+      transform-origin: center center;  
     }
 
     iframe.visible {
@@ -86,7 +88,7 @@ function enlargeFont() {
       h1 { font-size: 3em !important; }
       h2 { font-size: 3em !important; }
       h3 { font-size: 3em !important; }
-      p, td, th { font-size: 3em !important; }
+      p, td, th { font-size: 4em !important; }
     `;
     doc.head.appendChild(style);
   } catch (err) {
@@ -99,3 +101,4 @@ function enlargeFont() {
 
 </body>
 </html>
+
