--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -49,7 +49,7 @@
 
     function swapFrames() {
       if (showingA) {
-        frameB.src = "BANNER.html?t=" + new Date().getTime(); // reload banner
+        frameB.src = "Banner.html?t=" + new Date().getTime(); // reload banner
         frameB.classList.add("visible");
         frameA.classList.remove("visible");
 
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
