--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -96,8 +96,8 @@
 
   <script>
     const dashboards = [
-      { url: "BB_Telesales_Statistics.html", duration: 60000 }, 
-      { url: "Telesales_Statistics.html", duration: 120000 }
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, 
+      { url: "Pharma_Telesales_Statistics.html", duration: 120000 }
     ];
 
     let index = 0;
@@ -157,4 +157,5 @@
 
 </body>
 </html>
+
 
