--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -9,24 +9,40 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      height: 100%;
       width: 100%;
+      height: 100%;
       background-color: black;
     }
 
+    /* This fixes the 3/4 screen issue in Fully Kiosk */
     iframe {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       border: none;
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
+      background-color: black;
+      display: block;
     }
 
     iframe.visible {
       opacity: 1;
+    }
+
+    /* Ensures font scales with screen size */
+    @media (min-width: 1920px) {
+      body {
+        font-size: 200%;
+      }
+    }
+
+    @media (min-width: 2560px) {
+      body {
+        font-size: 300%;
+      }
     }
   </style>
 </head>
@@ -40,8 +56,7 @@
     const frameA = document.getElementById("frameA");
     const frameB = document.getElementById("frameB");
 
-    // Timing settings
-    const telesalesTime = 1 * 60 * 1000; // 1 minutes
+    const telesalesTime = 1 * 60 * 1000; // 1 minute
     const bannerTime = 30 * 1000;        // 30 seconds
     const fadeDuration = 1500;           // 1.5 seconds fade
 
@@ -50,53 +65,65 @@
     function swapFrames() {
       if (showingA) {
         // Switch to banner
-        frameB.src = "Banner.html"; // always reload banner fresh
+        frameB.src = "Banner.html"; // reload banner fresh
         frameB.classList.add("visible");
         frameA.classList.remove("visible");
 
         setTimeout(() => {
           showingA = false;
-          setTimeout(swapFrames, bannerTime); // show banner for 30 sec
+          setTimeout(swapFrames, bannerTime);
         }, fadeDuration);
       } else {
-        // Switch back to telesales and reload for updated data
-        frameA.src = "Beibora_Telesales_Statistics.html?t=" + new Date().getTime(); 
-        // the ?t=timestamp ensures browser doesn’t cache the old data
-
+        // Switch back to telesales
+        frameA.src = "Beibora_Telesales_Statistics.html?t=" + new Date().getTime();
         frameA.classList.add("visible");
         frameB.classList.remove("visible");
-        
+
         setTimeout(() => {
           showingA = true;
-          setTimeout(swapFrames, telesalesTime); // show telesales for 5 min
+          setTimeout(swapFrames, telesalesTime);
         }, fadeDuration);
       }
     }
 
- // 🔹 Function to inject extra-large font sizes into the telesales frame
-function enlargeFont() {
-  try {
-    const doc = frameA.contentDocument || frameA.contentWindow.document;
-    const style = doc.createElement('style');
-    style.textContent = `
-      /* Super large fonts for big display screens */
-      body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
-        font-size: 3em !important;  /* everything 3x normal size */
+    // Inject larger font styling into telesales dashboard
+    function enlargeFont() {
+      try {
+        const doc = frameA.contentDocument || frameA.contentWindow.document;
+        const style = doc.createElement('style');
+        style.textContent = `
+          body, h1, h2, h3, h4, h5, h6, p, td, th, div, span {
+            font-size: 2.5vw !important; /* Scales dynamically with screen width */
+          }
+          table {
+            width: 100% !important;
+          }
+        `;
+        doc.head.appendChild(style);
+      } catch (err) {
+        console.warn("Font resize skipped (cross-origin):", err);
       }
-      h1 { font-size: 3em !important; }
-      h2 { font-size: 3em !important; }
-      h3 { font-size: 3em !important; }
-      p, td, th { font-size: 3em !important; }
-    `;
-    doc.head.appendChild(style);
-  } catch (err) {
-    console.warn("Font resize skipped (cross-origin):", err);
-  }
-}
-    // Start rotation after first telesales period
+    }
+
+    // Try enlarging font every few seconds (to catch reloads)
+    setInterval(enlargeFont, 5000);
+
+    // Start rotation after first telesales display
     setTimeout(swapFrames, telesalesTime);
+
+    // Make sure iframe resizes to true screen height in kiosk browsers
+    function adjustFullScreen() {
+      const height = window.innerHeight + "px";
+      const width = window.innerWidth + "px";
+      [frameA, frameB].forEach(f => {
+        f.style.height = height;
+        f.style.width = width;
+      });
+    }
+
+    window.addEventListener("resize", adjustFullScreen);
+    window.addEventListener("load", adjustFullScreen);
   </script>
 
 </body>
 </html>
-
